--- a/index.html
+++ b/index.html
@@ -7,54 +7,68 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <ul class="navbar"> <!-- navbar -->
+  <!-- NAVBAR -->
+  <ul class="navbar">
     <li><a href="#home">Home</a></li>
     <li><a href="#book">Book</a></li>
     <li><a href="#author">Author</a></li>
     <li><a href="#mission">Mission</a></li>
     <li><a href="#essentials">Essentials</a></li>
   </ul>
-  <div class="one" id="home"> <!-- home -->
+
+  <!-- HOME SECTION -->
+  <section class="one" id="home">
     <h1>SAT Prep, Reframed</h1>
-    <div class="container">
-      <a class="button">Get Started</a>
+    <div style="text-align:center; padding-bottom:20px;">
+      <a class="button" href="#book">Get Started</a>
     </div>
-    <div class="container">
-      <img class="home" src="assets/image_placeholder.jpg" alt="Couldn't load image">
-      <img class="home" src="assets/image_placeholder.jpg" alt="Couldn't load image">
-      <img class="home" src="assets/image_placeholder.jpg" alt="Couldn't load image">
+
+    <div class="home-imgs">
+      <img src="assets/image_placeholder.jpg" />
+      <img src="assets/image_placeholder.jpg" />
+      <img src="assets/image_placeholder.jpg" />
     </div>
-  </div>
-  <div class="two" id="book"> <!-- the book -->
+  </section>
+
+  <!-- BOOK -->
+  <section class="two" id="book">
     <h2>The Book</h2>
     <div class="book-container">
-      <img src="assets/image_placeholder.jpg" alt="Couldn't load image">
+      <img src="assets/image_placeholder.jpg">
       <div class="book-text">
-        <p>some text</p>
+        <p>some text about the book</p>
         <a class="button" href="https://www.amazon.com/SAT-Reading-Reframed-Strategies-1600-Scorer/dp/B0FR9V538R" target="_blank">Buy Link</a>
       </div>
     </div>
-  </div>
-  <div class="one" id="author"> <!-- about the author -->
+  </section>
+
+  <!-- AUTHOR -->
+  <section class="one" id="author">
     <h2>About the Author</h2>
     <div class="author-container">
       <p>some text</p>
-      <img src="assets/image_placeholder.jpg" alt="Couldn't load image">
+      <img src="assets/image_placeholder.jpg" />
     </div>
-  </div>
-  <div class="two" id="mission"> <!-- mission -->
+  </section>
+
+  <!-- MISSION -->
+  <section class="two" id="mission">
     <h2>Our Mission</h2>
-    <div class="container">
+    <div style="max-width:700px; margin:auto; text-align:center; padding:20px;">
       <p>some text</p>
     </div>
-  </div>
-  <div class="one" id="join"> <!-- email list -->
+  </section>
+
+  <!-- JOIN EMAIL -->
+  <section class="one" id="join">
     <h2>Join the email list:</h2>
-    <div class="container">
-      <a class="button">Join</a>
+    <div style="text-align:center;">
+      <a class="button" href="#">Join</a>
     </div>
-  </div>
-  <div class="two" id="essentials"> <!-- essentials -->
+  </section>
+
+  <!-- ESSENTIALS -->
+  <section class="two" id="essentials">
     <h2>SAT Essentials</h2>
     <ul class="essentials">
       <li><a class="button" href="#">link 1</a></li>
@@ -62,35 +76,37 @@
       <li><a class="button" href="#">link 3</a></li>
       <li><a class="button" href="#">link 4</a></li>
     </ul>
-  </div>
-  <div class="one" id="contact"> <!-- contact us -->
+  </section>
+
+  <!-- CONTACT -->
+  <section class="one" id="contact">
     <h2>Contact Us</h2>
-    <div class="container">
-      <div class="contact-container">
-        <div class="contact-info">
-          <ul>
-            <li><p>info 1</p></li>
-            <li><p>info 2</p></li>
-          </ul>
-        </div>
-        <div class="contact-text">
-          <p>some text</p>
-        </div>
+    <div class="contact-container">
+      <div class="contact-info">
+        <ul>
+          <li><p>info 1</p></li>
+          <li><p>info 2</p></li>
+        </ul>
+      </div>
+      <div class="contact-text">
+        <p>some text</p>
       </div>
     </div>
-  </div>
-  <div class="two" id="more"> <!-- more -->
+  </section>
+
+  <!-- MORE -->
+  <section class="two" id="more">
     <h2>Looking for more?</h2>
     <div class="more-container">
-      <a class="button" href="#"><img src="assets/image_placeholder.jpg" alt="More 1"></a>
-      <a class="button" href="#"><img src="assets/image_placeholder.jpg" alt="More 2"></a>
-      <a class="button" href="#"><img src="assets/image_placeholder.jpg" alt="More 3"></a>
+      <a class="button"><img src="assets/image_placeholder.jpg"></a>
+      <a class="button"><img src="assets/image_placeholder.jpg"></a>
+      <a class="button"><img src="assets/image_placeholder.jpg"></a>
     </div>
-  </div>
+  </section>
+
   <footer>
     <p>Author: Mason Boucher</p>
     <p>copyright stuff idk what they put down here</p>
   </footer>
-  <script src="script.js"></script>
 </body>
 </html>
