changed basically everything bc grace wants a whole diff website...

--- a/index.html
+++ b/index.html
@@ -1,112 +1,149 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SAT Prep, Reframed</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>SAT Reading Reframed — Grace Shao</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <!-- NAVBAR -->
-  <ul class="navbar">
-    <li><a href="#home">Home</a></li>
-    <li><a href="#book">Book</a></li>
-    <li><a href="#author">Author</a></li>
-    <li><a href="#mission">Mission</a></li>
-    <li><a href="#essentials">Essentials</a></li>
-  </ul>
-
-  <!-- HOME SECTION -->
-  <section class="one" id="home">
-    <h1>SAT Prep, Reframed</h1>
-    <div style="text-align:center; padding-bottom:20px;">
-      <a class="button" href="#book">Get Started</a>
+  <header class="site-header">
+    <div class="container header-inner">
+      <a class="brand" href="#hero">SAT Reading Reframed</a>
+      <nav class="nav">
+        <a href="#book">Book</a>
+        <a href="#about">About</a>
+        <a href="#reviews">Reviews</a>
+        <a href="#contact">Contact</a>
+      </nav>
     </div>
+  </header>
 
-    <div class="home-imgs">
-      <img src="assets/image_placeholder.jpg" />
-      <img src="assets/image_placeholder.jpg" />
-      <img src="assets/image_placeholder.jpg" />
-    </div>
-  </section>
-
-  <!-- BOOK -->
-  <section class="two" id="book">
-    <h2>The Book</h2>
-    <div class="book-container">
-      <img src="assets/image_placeholder.jpg">
-      <div class="book-text">
-        <p>some text about the book</p>
-        <a class="button" href="https://www.amazon.com/SAT-Reading-Reframed-Strategies-1600-Scorer/dp/B0FR9V538R" target="_blank">Buy Link</a>
+  <main>
+    <section id="hero" class="hero">
+      <div class="container hero-grid">
+        <div class="hero-copy">
+          <h1>Turn test-prep from dull to vivid.</h1>
+          <p class="lead">SAT Reading Reframed: Must-See Strategies from a 1600-Scorer — a colorful, student-friendly guide that makes the SAT feel like an adventure.</p>
+          <p class="cta-row">
+            <a href="https://a.co/d/2oPMSN1" class="btn btn-primary" target="_blank" rel="noopener">Buy on Amazon</a>
+          </p>
+          <p class="small">Interested in hosting an SAT workshop or author talk at your school or library? <strong>Email me at <a href="mailto:satreadingreframed@gmail.com">satreadingreframed@gmail.com</a></strong></p>
+        </div>
+        <div class="hero-media">
+          <img src="assets/book_cover.jpg" alt="Book cover: SAT Reading Reframed" />
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- AUTHOR -->
-  <section class="one" id="author">
-    <h2>About the Author</h2>
-    <div class="author-container">
-      <p>some text</p>
-      <img src="assets/image_placeholder.jpg" />
-    </div>
-  </section>
+    <section id="book" class="section alt">
+      <div class="container">
+        <h2>The Book</h2>
+        <div class="book-grid">
+          <div class="book-desc">
+            <p class="book-lead"><em>This is not your average textbook. With SAT Reading Reframed: Must-See Strategies from a 1600-Scorer, the SAT becomes an adventure.</em></p>
 
-  <!-- MISSION -->
-  <section class="two" id="mission">
-    <h2>Our Mission</h2>
-    <div style="max-width:700px; margin:auto; text-align:center; padding:20px;">
-      <p>some text</p>
-    </div>
-  </section>
+            <ul>
+              <li>Powerful strategies to boost reading comprehension</li>
+              <li>How to think like a test-writer, not just a test-taker</li>
+              <li>Analyses of the digital SAT's 10 question types, including…</li>
+              <ul>
+                <li>right and wrong answer patterns,</li>
+                <li>step-by-step breakdowns</li>
+                <li>and connections to what you already know</li>
+              </ul>
+              <li>Practice problems with full solutions</li>
+              <li>Beyond-the-test advice for studying effectively and handling nerves</li>
+            </ul>
 
-  <!-- JOIN EMAIL -->
-  <section class="one" id="join">
-    <h2>Join the email list:</h2>
-    <div style="text-align:center;">
-      <a class="button" href="#">Join</a>
-    </div>
-  </section>
+            <p class="note">Illustrated like a comforting children's book — colorful diagrams, doodles, and a cute bunny guide. Perfect for beginners and useful for advanced students.</p>
+            <p class="note">And not only is this book effective, it's enjoyable. SAT Reading Reframed is illustrated like a comforting children's book — with colorful, hand-drawn covers, diagrams, doodles, and even a cute little bunny to guide you along.</p>
+            <p class="note">This book is perfect for the beginner, but the expert advice inside is a must-see for every student. Learn from the unique lens of a 1600-scorer who's a student just like you.</p>
+            <p><a href="https://a.co/d/2oPMSN1" class="btn btn-primary" target="_blank" rel="noopener">Buy the book</a></p>
+          </div>
 
-  <!-- ESSENTIALS -->
-  <section class="two" id="essentials">
-    <h2>SAT Essentials</h2>
-    <ul class="essentials">
-      <li><a class="button" href="#">link 1</a></li>
-      <li><a class="button" href="#">link 2</a></li>
-      <li><a class="button" href="#">link 3</a></li>
-      <li><a class="button" href="#">link 4</a></li>
-    </ul>
-  </section>
-
-  <!-- CONTACT -->
-  <section class="one" id="contact">
-    <h2>Contact Us</h2>
-    <div class="contact-container">
-      <div class="contact-info">
-        <ul>
-          <li><p>info 1</p></li>
-          <li><p>info 2</p></li>
-        </ul>
+          <div class="book-media">
+            <div class="gallery">
+              <img src="assets\image_placeholder.jpg" alt="Interior page preview 1">
+              <img src="assets\image_placeholder.jpg" alt="Interior page preview 2">
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="contact-text">
-        <p>some text</p>
+    </section>
+
+    <section id="about" class="section container">
+      <h2>About the Author</h2>
+      <div class="author">
+        <img src="assets\image_placeholder.jpg" alt="Grace Shao speaking" class="author-photo">
+        <div>
+          <p class="author-bio">Grace Shao is a high schooler from Maryland. She scored a perfect 1600 on the SAT the summer after eighth grade. Since then, she has taught for nonprofits, hosted SAT seminars, and run her school's weekly SAT prep club. Grace has always loved to draw, and she took inspiration from colorful children's books and her past “Super Grace” comics to create <em>SAT Reading Reframed</em>.</p>
+        </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- MORE -->
-  <section class="two" id="more">
-    <h2>Looking for more?</h2>
-    <div class="more-container">
-      <a class="button"><img src="assets/image_placeholder.jpg"></a>
-      <a class="button"><img src="assets/image_placeholder.jpg"></a>
-      <a class="button"><img src="assets/image_placeholder.jpg"></a>
-    </div>
-  </section>
+    <section id="goal" class="section alt container">
+      <h2>The Goal</h2>
+      <div class="goal-content">
+        <p><strong>Let's work to make quality, engaging SAT prep available to every student.</strong></p>
+        <p>The SAT is hard because students don't know where to start. A high score isn't about being "smart enough," it's about effective test prep: learning the right material the right way. With <em>SAT Reading Reframed</em>, I offer not only my best SAT strategies but also lifelong advice on self-reflection, improving from mistakes, and handling pressure. This isn't a textbook; it's your study buddy.</p>
+        <p>The SAT is hard, but studying doesn't have to be. All students need is a comprehensive, enjoyable guide and some teenager-to-teenager advice. From SAT workshops at schools and libraries to donating nearly two hundred copies of <em>SAT Reading Reframed</em>, I want every student to conquer the SAT.</p>
+      </div>
+    </section>
 
-  <footer>
-    <p>Author: Mason Boucher</p>
-    <p>copyright stuff idk what they put down here</p>
-  </footer>
+    <section id="reviews" class="section container">
+      <h2>Reviews</h2>
+      <div class="reviews-grid">
+        <blockquote>“[SAT Reading Reframed] is a thoughtfully designed resource that I highly recommend to families seeking effective preparation support. My daughter used this book and achieved a perfect score on the SAT Reading section.” — Yang</blockquote>
+        <blockquote>“This book is richly illustrated with pictures; fun and easy to read. It provides a comprehensive analysis of the methods and techniques needed for SAT reading. I enjoyed reading this book!” — Lisa</blockquote>
+        <blockquote>“Each chapter is carefully but naturally written so that a student... can easily pass through and understand all the content.” — Kevin</blockquote>
+        <blockquote>“Rather than simply showing the correct answers, the book walks you through the reasoning and techniques behind them... It promotes learning rather than memorization.” — D</blockquote>
+      </div>
+    </section>
+
+    <!-- NEW: Photo gallery as a 3x2 grid (6 images) -->
+    <section id="gallery" class="section container">
+      <h2>Photo Gallery</h2>
+      <div class="photo-grid">
+        <a href="assets/image_placeholder.jpg" target="_blank" rel="noopener"><img src="assets/image_placeholder.jpg" alt="Photo 1"></a>
+        <a href="assets/image_placeholder.jpg" target="_blank" rel="noopener"><img src="assets/image_placeholder.jpg" alt="Photo 2"></a>
+        <a href="assets/image_placeholder.jpg" target="_blank" rel="noopener"><img src="assets/image_placeholder.jpg" alt="Photo 3"></a>
+        <a href="assets/image_placeholder.jpg" target="_blank" rel="noopener"><img src="assets/image_placeholder.jpg" alt="Photo 4"></a>
+        <a href="assets/image_placeholder.jpg" target="_blank" rel="noopener"><img src="assets/image_placeholder.jpg" alt="Photo 5"></a>
+        <a href="assets/image_placeholder.jpg" target="_blank" rel="noopener"><img src="assets/image_placeholder.jpg" alt="Photo 6"></a>
+      </div>
+    </section>
+
+    <section id="contact" class="section container">
+      <h2>Contact & Social</h2>
+      <div class="contact-grid">
+        <div class="contact-card">
+          <p class="big">Email</p>
+          <p><a href="mailto:satreadingreframed@gmail.com">satreadingreframed@gmail.com</a></p>
+        </div>
+
+        <div class="contact-card">
+          <p class="big">Social</p>
+          <p><a href="https://instagram.com/sat_reframed" target="_blank" rel="noopener">@sat_reframed</a></p>
+        </div>
+
+        <div class="contact-card">
+          <p class="big">Buying link</p>
+          <p><a href="https://a.co/d/2oPMSN1" target="_blank" rel="noopener">https://a.co/d/2oPMSN1</a></p>
+        </div>
+      </div>
+    </section>
+
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <p>© 2025 Grace Shao — SAT Reading Reframed</p>
+        <p><small>Website designed by <a href="https://github.com/mcboucher10" target="_blank" rel="noopener">Mason Boucher</a></small></p>
+      </div>
+    </footer>
+  </main>
+
+  <!-- removed previous gallery script -->
+  <!-- ...existing scripts (if any) ... -->
+
 </body>
 </html>
