--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
       <a class="brand" href="#hero">SAT Reading Reframed</a>
       <nav class="nav">
         <a href="#book">Book</a>
-        <a href="#about">About</a>
+        <a href="#about">Author</a>
+        <a href="#goal">Goal</a>
         <a href="#reviews">Reviews</a>
+        <a href="#gallery">Gallery</a>
         <a href="#contact">Contact</a>
       </nav>
     </div>
@@ -101,7 +103,6 @@
       </div>
     </section>
 
-    <!-- NEW: Photo gallery as a 3x2 grid (6 images) -->
     <section id="gallery" class="section container">
       <h2>Photo Gallery</h2>
       <div class="photo-grid">
@@ -141,9 +142,6 @@
       </div>
     </footer>
   </main>
-
-  <!-- removed previous gallery script -->
-  <!-- ...existing scripts (if any) ... -->
 
 </body>
 </html>
